# gtopt

./: .aider.conf.yml  .clang-format  .clang-tidy  .clangd  .cmake-format  .dir-locals.el  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .projectile  .pylintrc  1. **Extract Cost Calculation Logic** into a separate `CostCalculator` class  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DIAGRAM_TOOL.md  DOCUMENTATION_REVIEW.md  INPUT_DATA.md  INSTALL_GUISERVICE.md  INSTALL_WEBSERVICE.md  PLANNING_GUIDE.md  README.md  SCRIPTS.md  TODO  TODO.md  USAGE.md  USER_CONSTRAINTS.md  error_0_0_0_0.lp  fecha-corrida  gtopt_case_2y.json  mypy.ini  plp_bat_4b_24_out.json  pyproject.toml
all/: CMakeLists.txt
coverage/: CMakeLists.txt  GenerateCoverageReport.cmake
guiservice/: CMakeLists.txt  GTOPT_GUI.md  GTOPT_GUISRV.md  INPUT_DATA.md  INSTALL.md  README.md  _schemas.py  _zip_helpers.py  app.py  gtopt-guiservice.service  gtopt_gui.bat  gtopt_gui.py  gtopt_gui.sh  gtopt_guisrv.bat  gtopt_guisrv.py  gtopt_guisrv.sh  pyproject.toml  requirements.txt
guiservice/templates/: index.html
guiservice/tests/: test_app.py  test_gtopt_gui.py  test_gtopt_gui_integration.sh  test_gtopt_guisrv.py  test_gui_plus_endpoints.py  test_schema_partition.py  test_static_js.py
integration_test/: CMakeLists.txt  README.md
integration_test/cmake/: FindPandapower.cmake  add_e2e_case.cmake  add_pandapower_comparison.cmake  add_sddp_case.cmake  compare_csv.cmake  run_gtopt.cmake  run_sddp_gtopt.cmake  validate_sddp_status.cmake  validate_solution.cmake
integration_test/data/: README.md  sienna_14bus.tar.zst  sienna_5bus.tar.zst
plugins/: CMakeLists.txt
plugins/cplex/: CMakeLists.txt  cplex_plugin.cpp  cplex_solver_backend.cpp  cplex_solver_backend.hpp
plugins/cuopt/: CMakeLists.txt  cuopt_plugin.cpp  cuopt_solver_backend.cpp  cuopt_solver_backend.hpp
plugins/gurobi/: CMakeLists.txt  gurobi_plugin.cpp  gurobi_solver_backend.cpp  gurobi_solver_backend.hpp
plugins/highs/: CMakeLists.txt  highs_plugin.cpp  highs_solver_backend.cpp  highs_solver_backend.hpp
plugins/mindopt/: CMakeLists.txt  mindopt_plugin.cpp  mindopt_solver_backend.cpp  mindopt_solver_backend.hpp
plugins/osi/: CMakeLists.txt  osi_plugin.cpp  osi_solver_backend.cpp  osi_solver_backend.hpp
plugins/scip/: CMakeLists.txt  scip_plugin.cpp  scip_solver_backend.cpp  scip_solver_backend.hpp
profiling/: CMakeLists.txt  GenerateProfilingReport.cmake  generate_pstats_report.py  inject_build_lp.py  inject_just_build_lp.py
scripts/: .gitignore  CMakeLists.txt  conftest.py  coverage.xml  gtopt_diagram.py  gtopt_field_extractor.py  igtopt.py  make_igtopt_template.py  mycase.xlsx  plp_compress_case.sh  pydem.py  pyproject.toml  requirements-dev.txt  requirements.txt  sddp_monitor.py
scripts/cases/: .gitignore  gtopt_case_2y.json  plp_case_2y
scripts/cen2gtopt/: __init__.py  __main__.py  _bus_catalogue.py  _cache.py  _cached_extractor.py  _cen_client.py  _csv_endpoints.py  _csv_parsers.py  _emission_factors.py  _heatrate_sip.py  _id_bridge.py  _infotecnica.py  _mc_composition.py  _normalize.py  _operacion_client.py  _plexos_xml.py  _scvic_api.py  _scvic_loader.py  _sip_client.py  _sip_endpoints.py  _topology.py  _writer.py  buses.py  cache.py  daily_update.py  main.py  marginal_period.py  marginal_units.py  pcp_archive.py  pcp_inputs.py  pcp_solution.py  pcp_validate.py  prepopulate_cache.py
scripts/cen_demanda/: __init__.py  main.py
scripts/cmake/: add_pytest_integration_test.cmake  install_deps_helper.py  scripts_install_deps.cmake
scripts/compare_pandapower/: __init__.py  __main__.py  main.py
scripts/cvs2parquet/: __init__.py  cvs2parquet.py
scripts/gtopt2pbi/: __init__.py  __main__.py  main.py
scripts/gtopt2pp/: __init__.py  convert.py  main.py
scripts/gtopt_benchmark/: __init__.py  main.py
scripts/gtopt_canonical_feed/: __init__.py  cells.py  errors.py  feed_io.py  manifest.py  topology.py
scripts/gtopt_check_fingerprint/: __init__.py  __main__.py  _cli.py  _fingerprint.py
scripts/gtopt_check_json/: __init__.py  _checks.py  _checks_common.py  _colors.py  _config.py  _diagram_helper.py  _engine_validate.py  _file_reader.py  _general_checks.py  _hydro_checks.py  _info.py  _pp_helper.py  _reference_checks.py  _terminal.py  _topology_checks.py  gtopt_check_json.py
scripts/gtopt_check_lp/: __init__.py  _ai.py  _benchmark.py  _checker.py  _cli.py  _colors.py  _compress.py  _config.py  _lp_analyzer.py  _neos.py  _solvers.py  gtopt_check_lp.py
scripts/gtopt_check_output/: __init__.py  __main__.py  _checks.py  _loss_arbitrage.py  _reader.py  main.py
scripts/gtopt_check_pampl/: __init__.py  _checks.py  _config.py  gtopt_check_pampl.py
scripts/gtopt_check_solvers/: __init__.py  _binary.py  _solver_tests.py  gtopt_check_solvers.py
scripts/gtopt_check_topology/: __init__.py  __main__.py  _analyzer.py  _render.py  main.py
scripts/gtopt_compare/: __init__.py  __main__.py  main.py
scripts/gtopt_compress_lp/: __init__.py  _colors.py  _config.py  gtopt_compress_lp.py
scripts/gtopt_config/: __init__.py  _cli.py  _config.py
scripts/gtopt_diagram/: __init__.py  _classify.py  _data_utils.py  _field_resolver.py  _graph_model.py  _planning_diagram.py  _renderers.py  _svg_constants.py  _topology_hydro.py  _topology_ids.py  _topology_network.py  cli.py  gtopt_diagram.py
scripts/gtopt_diagram_tests/: test_gtopt_diagram.py
scripts/gtopt_expand/: __init__.py  _base.py  cli.py  hb_maule_expand.py  laja_agreement.py  lng_expand.py  maule_agreement.py  pmin_flowright_expand.py  pumped_storage_expand.py  ror_expand.py
scripts/gtopt_field_extractor/: __init__.py  gtopt_field_extractor.py
standalone/: CMakeLists.txt
test/: .clang-tidy  BENCHMARK_RESULTS.md  CMakeLists.txt  flat_helper_test.cpp
webservice/: CMakeLists.txt  GTOPT_WEBSRV.md  INSTALL.md  README.md  eslint.config.mjs  gtopt-webservice.service  gtopt_websrv.bat  gtopt_websrv.js  gtopt_websrv.sh  jest.config.js  jest.config.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
(+5106 files in other folders)
