[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtopt-scripts"
version = "1.0.0"
description = "gtopt conversion and utility scripts (cvs2parquet, igtopt, plp2gtopt)"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "openpyxl",
]

[project.scripts]
plp2gtopt = "plp2gtopt.main:main"
igtopt = "igtopt.igtopt:main"
cvs2parquet = "cvs2parquet.cvs2parquet:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "pylint>=2.15",
    "ruff>=0.0.280",
    "black>=22.0"
]

[tool.setuptools]
packages = ["plp2gtopt", "igtopt", "cvs2parquet"]
package-dir = { "plp2gtopt" = "scripts/plp2gtopt", "igtopt" = "scripts/igtopt", "cvs2parquet" = "scripts/cvs2parquet" }
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["plp2gtopt"]

[tool.pylint]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["scripts/plp2gtopt/tests"]
addopts = "-v --import-mode=importlib"
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that use sample PLP case files",
]

[tool.coverage.run]
source = [
    "scripts/plp2gtopt",
    "scripts/igtopt",
    "scripts/cvs2parquet",
    "guiservice",
]
omit = [
    "*/test*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
]
