[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# The Python scripts (cvs2parquet, igtopt, plp2gtopt) live under scripts/ and
# have their own self-contained pyproject.toml, requirements.txt, and
# requirements-dev.txt.  To install them:
#
#   pip install ./scripts           # production install (from repo root)
#   pip install -e ./scripts        # editable install (from repo root)
#
# The sections below contain only repository-wide tool configuration.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["plp2gtopt"]

[tool.pylint]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error"
]

[tool.pylsp]
skip_token_initialization = true

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["scripts/plp2gtopt/tests"]
addopts = "-v --import-mode=importlib"
pythonpath = ["."]
markers = [
    "integration: end-to-end tests that use sample PLP case files",
]

[tool.coverage.run]
source = [
    "scripts/plp2gtopt",
    "scripts/igtopt",
    "scripts/cvs2parquet",
    "guiservice",
]
omit = [
    "*/test*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
]
